Usando .dev.localhost

--- a/McpAuthorized.AppHost/Properties/launchSettings.json
+++ b/McpAuthorized.AppHost/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:17189;http://localhost:15030",
+      "applicationUrl": "https://mcpauth.dev.localhost:17189;http://mcpauth.dev.localhost:15030",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
@@ -18,7 +18,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:15030",
+      "applicationUrl": "http://mcpauth.dev.localhost:15030",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
