--- a/McpAuthorized/McpAuthorized.csproj
+++ b/McpAuthorized/McpAuthorized.csproj
@@ -17,8 +17,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Keycloak.Authentication" Version="13.1.1-preview.1.26105.8" />
-    <PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.9.0-preview.1" />
+    <PackageReference Include="Aspire.Keycloak.Authentication" Version="13.1.2-preview.1.26125.13" />
+    <PackageReference Include="ModelContextProtocol.AspNetCore" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\McpAuthorized.ServiceDefaults\McpAuthorized.ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
